tests/health/gold/sdk/tests__pi__spi.toit.gold
tests/pi/spi.toit:54:16: error: Type mismatch. Expected 'ByteArray'. Got 'List'
  device.write [0x01, 0x02, 0x03]
               ^
